--- a/templates/doc-base.html
+++ b/templates/doc-base.html
@@ -269,6 +269,9 @@
                                 </div>
                                 <h6>Table of Contents</h6>
                                 <nav class="list-unstyled doc_menu" id="navbar-example3">
+                                    <ul class="list-unstyled">
+                                        
+                                    </ul>
                                     <a href="#documentation" class="nav-link active">Documentation</a>
                                     <a href="#getting" class="nav-link">Getting started</a>
                                     <a href="#version" class="nav-link">Test KbDoc Version</a>
