I have added the css varibles for the common colors.

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img class='loader-img' src="{% static 'img/my-static/folders.png' %}" alt="">
-                    <h4><span>Personal Notes</span></h4>
+                    {% comment %} <h4><span>Personal Notes</span></h4> {% endcomment %}
                 </div>
             </div>
         </div>
