--- a/templates/doc-base.html
+++ b/templates/doc-base.html
@@ -32,7 +32,7 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img class="loader-img" src="{% static 'img/my-static/folders.png' %}" alt="">
-                    <h4 class="px-4 pt-1" style="font-size: 25px"><span>Personal Notes</span></h4>
+                    {% comment %} <h4 class="px-4 pt-1" style="font-size: 25px"><span>Personal Notes</span></h4> {% endcomment %}
                 </div>
             </div>
         </div>
