--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,6 +39,11 @@ Table of Content:
 
 /*---------------------------------------------------- */
 /*----------------------------------------------------*/
+:root {
+  --primary: #10b3d6;
+  --secondary: #1d2746;
+}
+
 body {
   overflow-x: hidden;
   max-width: 100vw;
