I removed the default toc in the doc-base template.

--- a/templates/doc-base.html
+++ b/templates/doc-base.html
@@ -272,11 +272,11 @@
                                     <ul class="list-unstyled">
                                         
                                     </ul>
-                                    <a href="#documentation" class="nav-link active">Documentation</a>
+                                    {% comment %} <a href="#documentation" class="nav-link active">Documentation</a>
                                     <a href="#getting" class="nav-link">Getting started</a>
                                     <a href="#version" class="nav-link">Test KbDoc Version</a>
                                     <a href="#developer" class="nav-link">Not a developer?</a>
-                                    <a href="#help" class="nav-link">We're here to help!</a>
+                                    <a href="#help" class="nav-link">We're here to help!</a> {% endcomment %}
                                 </nav>
                             </div>
                         </div>
