--- a/templates/doc-base.html
+++ b/templates/doc-base.html
@@ -269,7 +269,7 @@
                                 </div>
                                 <h6>Table of Contents</h6>
                                 <nav class="list-unstyled doc_menu" id="navbar-example3">
-                                    <ul class="list-unstyled">
+                                    <ul class="list-unstyled" id="toc">
                                         
                                     </ul>
                                     {% comment %} <a href="#documentation" class="nav-link active">Documentation</a>
