--- a/templates/doc-base.html
+++ b/templates/doc-base.html
@@ -267,11 +267,8 @@
                                     <input type="checkbox" name="something" id="something" class="tab_switcher">
                                     <label for="something" class="tab-btn"><i class="icon_star_alt"></i></label>
                                 </div>
-                                <h6>Table of Contents</h6>
-                                <nav class="list-unstyled doc_menu" id="navbar-example3">
-                                    <ul class="list-unstyled" id="toc">
-                                        
-                                    </ul>
+                                <h6 class="mt-3">Table of Contents</h6>
+                                <nav class="list-unstyled doc_menu" id="toc">
                                     {% comment %} <a href="#documentation" class="nav-link active">Documentation</a>
                                     <a href="#getting" class="nav-link">Getting started</a>
                                     <a href="#version" class="nav-link">Test KbDoc Version</a>
