--- a/templates/doc-base.html
+++ b/templates/doc-base.html
@@ -258,7 +258,7 @@
                                 <i class="arrow_carrot-right"></i>
                             </div>
                             <div class="doc_rightsidebar scroll">
-                                <div id="font-switcher" class="d-flex justify-content-between align-items-center">
+                                <div id="font-switcher" class="d-flex align-items-center">
                                     <div id="rvfs-controllers" class="fontsize-controllers group"></div>
                                     <a href="javascript:window.print()" class="print"><i class="icon_printer"></i></a>
                                 </div>
