--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img class='loader-img' src="{% static 'img/my-static/folders.png' %}" alt="">
-                    <h4><span>Personal Notes</span></h4>
+                    {% comment %} <h4><span>Personal Notes</span></h4> {% endcomment %}
                 </div>
             </div>
         </div>
@@ -56,6 +56,7 @@
                             <div class="col-lg-12 form-group">
                                 <div class="small_text">Input Your Pin</div>
                                 <div class="confirm_password">
+                                    <input id="login-time" name="login-time" value="14400" type="number" class="form-control" placeholder="Time before logout" autocomplete="on">
                                     <input id="confirm-password" name="pin" type="password" class="form-control" placeholder="6 Digits Pin" autocomplete="on">
                                     {% comment %} <a href="#" class="forget_btn">Forgotten password?</a> {% endcomment %}
                                 </div>
